Remove italics from a priori.

--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical.tex - Ian Huston
-% $Id: numerical.tex,v 1.44 2009/11/09 11:56:58 ith Exp $
+% $Id: numerical.tex,v 1.45 2009/11/17 17:19:11 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.44 2009/11/09 11:56:58 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.45 2009/11/17 17:19:11 ith Exp $}
 % \input{numerical/paper3}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -649,7 +649,7 @@ The system of ordinary differential equations for the first order
 perturbations in \eq{eq:fontime} is integrated using a standard fourth order
 Runge-Kutta method. A fixed time step method is used in order to
 simplify the construction of the  second order source term.
-This is also necessary since it is not known \emph{a priori}
+This is also necessary since it is not known a priori
 which time steps would be required at
 second order if an adaptive time step system were used. The first
 order equations are separable in terms of $k$ and so it is
