Changed size of some figures and filename of one.

--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical.tex - Ian Huston
-% $Id: numerical.tex,v 1.46 2009/11/17 22:32:03 ith Exp $
+% $Id: numerical.tex,v 1.47 2009/11/18 18:17:36 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.46 2009/11/17 22:32:03 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.47 2009/11/18 18:17:36 ith Exp $}
 % \input{numerical/paper3}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -808,7 +808,7 @@ discretised $\theta$s, keeping the other parameters fixed and using the $K_3$
 range. The upper blue line ($N_\theta=129$) and middle green line
  ($N_\theta=257$) have relative errors at least an order of magnitude larger
 than the lower red line ($N_\theta=513$).]{
- \includegraphics[width=0.43\textwidth]{numerical/graphs/err-nthetas-small.pdf}
+ \includegraphics[width=0.43\textwidth]{numerical/graphs/err_nthetas-small.pdf}
  \label{fig:err-nthetas}
 }\qquad
 % 
@@ -896,7 +896,7 @@ we will keep its numerical value fixed throughout.
 
 \begin{figure}[htb]
  \centering
- \includegraphics[width=\textwidth]{numerical/graphs/err-deltak4.pdf}
+ \includegraphics[width=0.8\textwidth]{numerical/graphs/err_deltaks-large}
  \caption[Relative error in the integral $I_\A$]{The relative error in the
 integral $I_\A$ for different values of $\Delta k$.
 The other parameters are fixed: $\kmin=1\times10^{-60}\Mpl, N_k = 1025$ and
@@ -948,7 +948,7 @@ the figure.)
 
 \begin{figure}[htb]
  \centering
- \includegraphics[width=\textwidth]{numerical/graphs/err-deltak-kmin.pdf}
+ \includegraphics[width=0.8\textwidth]{numerical/graphs/err_deltak_kmin-large.pdf}
  % err-deltak-kmin.pdf: 432x324 pixel, 72dpi, 15.24x11.43 cm, bb=
  \caption[Relative error of $I_\A$ with fixed $\kmin$]{The 
 relative error of the integral $I_\A$ for three different values of $\Delta k$. In
