Removed duplicate reference

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.59 2009/11/05 19:58:59 ith Exp $
+% $Id: mainintro.tex,v 1.60 2009/11/19 18:55:58 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.59 2009/11/05 19:58:59 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.60 2009/11/19 18:55:58 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1262,7 +1262,8 @@ known as the local non-Gaussianity $\fnlloc$:
 \end{equation}
 Here the 
 quadratic component represents a convolution and 
-$\R_G$ denotes the Gaussian contribution \cite{maldacena}\footnotemark.
+$\R_G$ denotes the Gaussian contribution
+\cite{Maldacena:2002vr}\footnotemark.
 \footnotetext{We use the WMAP sign convention for $\fnl$ throughout. 
 This is the opposite of the Maldacena convention:
 $\fnl^\mathrm{WMAP}=-\fnl^\mathrm{Maldacena}$.}
