Added declaration text.

--- a/title.tex
+++ b/title.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % 
 % title.tex - Ian Huston
-% $Id: title.tex,v 1.6 2009/10/15 18:05:07 ith Exp $
+% $Id: title.tex,v 1.7 2009/11/19 18:56:07 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: title.tex,v 1.6 2009/10/15 18:05:07 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: title.tex,v 1.7 2009/11/19 18:56:07 ith Exp $}
 % 
 \college{Queen Mary}
 % 
@@ -25,4 +25,28 @@ perturbations}
 \hypersetup{pdftitle={Constraining inflationary scenarios with braneworld models and second order
 cosmological perturbations},pdfauthor={Ian Huston}}
 % 
+
+\declaration{%
+I hereby certify that this thesis, which is approximately 45,000 words in length,
+has been written by me, that it is the record of the work carried out by me at the
+Astronomy Unit, Queen Mary, University of London, and that it has not been submitted
+in any previous application for a higher degree.
+\\
+Chapter~\ref{ch:dbi} primarily contains work done with James E.
+Lidsey and published in the Journal of Cosmology and Astroparticle Physics (JCAP)
+\cite{lidseyhuston}. Section~\ref{sec:twlargen-multi} also contains work published
+in \Rref{lidseyhuston}.
+% 
+The majority of Chapter~\ref{ch:multibrane} is based on work completed in
+collaboration with James E. Lidsey, Steven Thomas and John Ward and published in JCAP
+\cite{hltw}. 
+% 
+Chapters~\ref{ch:perts}, \ref{ch:numericalsystem} and \ref{ch:results} contain work
+done with Karim Malik, and large parts of these chapters were published in JCAP
+\cite{hustonmalik}.
+\\
+I have made a major contribution to all the original research presented in this
+thesis.
+}
+
 \maketitle
