Changed to specific thesis bibtex file.

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.40 2009/11/16 16:59:29 ith Exp $
+% $Id: thesis.tex,v 1.41 2009/11/19 18:56:19 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %  twoside,
@@ -26,7 +26,7 @@ onehalfspacing % onehalfspacing or doublespacing
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.40 2009/11/16 16:59:29 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.41 2009/11/19 18:56:19 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
@@ -118,8 +118,8 @@ theend
 \begin{singlespace}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Bibliography
-\bibliography{../central-store}
-\bibliographystyle{../packages/utphys}
+\bibliography{thesis}
+\bibliographystyle{../packages/utphys-ih}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % 
