Fixed spelling mistakes.

--- a/theend.tex
+++ b/theend.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % theend.tex - Ian Huston
-% $Id: theend.tex,v 1.13 2009/11/16 16:59:10 ith Exp $
+% $Id: theend.tex,v 1.14 2009/11/20 11:33:59 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: theend.tex,v 1.13 2009/11/16 16:59:10 ith Exp $}
+{\version$Id: theend.tex,v 1.14 2009/11/20 11:33:59 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -53,7 +53,7 @@ model in a string-theory context.
 
 In \Rref{bmpaper}, Baumann and McAllister used the Lyth bound \cite{lyth} to limit
 the tensor-scalar ratio based on the conservative assumption that the brane could
-not propogate further than the full length of the throat. In Chapter~\ref{ch:dbi},
+not propagate further than the full length of the throat. In Chapter~\ref{ch:dbi},
 we showed that this bound can be tightened by applying it over the
 portion of the throat which the brane passes through during the directly observable
 e-foldings of inflation. Restricting the field variation to be over these,
@@ -103,7 +103,7 @@ phenomenological description of this family of actions allows easy identificatio
 those models for which the bound on $r$ is less stringent. 
 
 One proposed, multi brane, single field model is the coincident brane scenario of
-Thomas \& Ward \cite{thomasward}. When $n$ D3-branes propogate in a throat, the
+Thomas \& Ward \cite{thomasward}. When $n$ D3-branes propagate in a throat, the
 non-Abelian interactions between the branes result in major departures from the
 single brane case. This is in contrast to the non-interacting branes model in which
 the total action is simply the sum of copies of the single brane action.
@@ -151,7 +151,7 @@ equation was used.
 Calculating the second order scalar field perturbations provides the possibility of
 a unique insight into the generation and evolution of non-linear contributions to
 the scalar curvature perturbation. The long term aim of this continuing project is
-to analyze multi-field, non slow roll models in which non-Gaussian effects are
+to analyse multi-field, non slow roll models in which non-Gaussian effects are
 expected to play an important role.
 
 As a step towards that goal, we described the implementation of a numerical
