Add list of figures and tables

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.41 2009/11/19 18:56:19 ith Exp $
+% $Id: thesis.tex,v 1.42 2009/11/20 13:56:15 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %  twoside,
@@ -26,7 +26,7 @@ onehalfspacing % onehalfspacing or doublespacing
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.41 2009/11/19 18:56:19 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.42 2009/11/20 13:56:15 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
@@ -69,8 +69,8 @@ theend
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 %\setcounter{tocdepth}{0}
 \tableofcontents
-% \listoffigures
-%\listoftables
+\listoffigures
+\listoftables
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 \onehalfspacing
